Fixed star alignment
Fixed the star alignment so it is right justified so stars get added to the front and not the back

--- a/settings.css
+++ b/settings.css
@@ -941,9 +941,10 @@ a.btn {
 	background: rgba(66, 66, 66, 0.32);
 }
 .right {
-	float: right;
+	display: flex;
+	justify-content: flex-end;
 	top: 3.5vh;
-	right: -14vh;
+	right: -3.25vh;
 	position: absolute;
 	z-index: 2;
 }
